# wikireader

./: .gitignore  00ReadMe.text  00run.sh  01run.sh  BSDmakefile  BUGS  COPYING  HOW-TO  Makefile  QuickStart  README  README.md  TODO  index.html  params.json  wiki-reader.sh
Licenses/: BSD.TXT
SavedCaches/: config.cache-binutils-10.04LTS  config.cache-binutils-12.10  config.cache-binutils-PREV  config.cache-gcc-10.04LTS  config.cache-gcc-12.10  config.cache-gcc-12.10-i386  config.cache-gcc-PATCHED  config.cache-gcc-PREV
WRbaseFiles/: BSD2CL.TXT  NEWS.TXT  README.TXT  all-test.4mu  calc.4th  calc.elf  cli.4th  cob.elf  ctp-acc.4mu  ctp-acc.4th  ctp-test.4mu  (+36 more)
detect-wikireader/: Makefile  README  autogen.sh  configure.ac
detect-wikireader/det-wikird.deb/DEBIAN/: control
detect-wikireader/det-wikird.windows/: Makefile  det-wikird.cpp
detect-wikireader/src/: Makefile.am  check-wikireader.c  check-wikireader.h  daemon.c  daemon.h  log-message.c  log-message.h  main.c  wiki-inotify.c  wiki-inotify.h
testudo/linux-gpib-svn/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.HAMEG  README.hp82335  TODO  bootstrap  configure.ac
testudo/linux-gpib-svn/contrib/: Makefile
testudo/linux-gpib-svn/doc/: Makefile.am  greg_goebel_hpib_tutorial.html  linux-gpib.sgml  obsolete-linux-gpib.txt
testudo/linux-gpib-svn/drivers/: Makefile.am
testudo/linux-gpib-svn/drivers/gpib/: Makefile
testudo/linux-gpib-svn/drivers/gpib/agilent_82350b/: Makefile  agilent_82350b.h  agilent_82350b_init.c  agilent_82350b_interrupt.c  agilent_82350b_read.c  agilent_82350b_write.c
testudo/linux-gpib-svn/drivers/gpib/agilent_82357a/: agilent_82357a.c  agilent_82357a.h
testudo/linux-gpib-svn/drivers/gpib/cb7210/: Makefile  cb7210.h  cb7210_aux.c  cb7210_cs.c  cb7210_init.c  cb7210_read.c  cb7210_write.c  cb_cis_dump.txt  cbi4882.txt  interrupt.c
testudo/linux-gpib-svn/drivers/gpib/cec/: Makefile  cec.h  init.c  interrupt.c
testudo/linux-gpib-svn/drivers/gpib/eastwood/: Makefile  eastwood_gpib.c  eastwood_gpib.h
testudo/linux-gpib-svn/drivers/gpib/hp_82335/: Makefile  hp82335.h  hp82335_init.c
testudo/linux-gpib-svn/drivers/gpib/hp_82341/: Makefile  hp_82341.h  hp_82341_init.c  hp_82341_read.c  hp_82341_write.c
testudo/linux-gpib-svn/drivers/gpib/include/: Makefile.am  amcc5920.h  amccs5933.h  gpibP.h  gpib_ioctl.h  gpib_proto.h  gpib_state_machines.h  gpib_types.h  gpib_user.h  nec7210.h  nec7210_registers.h  plx9050.h  quancom_pci.h  tms9914.h  tnt4882_registers.h
testudo/linux-gpib-svn/drivers/gpib/include/linux/: delay.h  device.h  interrupt.h  module.h  pci_ids.h  time.h  usb.h
testudo/linux-gpib-svn/drivers/gpib/include/pcmcia/: cistpl.h
testudo/linux-gpib-svn/drivers/gpib/ines/: Makefile  ines.h  ines_cis_dump.txt  ines_cs.c  ines_init.c  ines_read.c  ines_util.c  ines_write.c  interrupt.c
testudo/linux-gpib-svn/drivers/gpib/nec7210/: Makefile  board.h  cmd.c  init.c  interrupt.c  nec7210_aux.c  read.c  util.c  write.c
testudo/linux-gpib-svn/drivers/gpib/ni_usb/: ni_usb_gpib.c  ni_usb_gpib.h
testudo/linux-gpib-svn/drivers/gpib/pc2/: Makefile  interrupt.c  pc2.h  pc2_init.c
testudo/linux-gpib-svn/drivers/gpib/sys/: Makefile  autopoll.c  autopoll.h  device.c  event.c  ibcac.c  ibcmd.c  ibgts.c  ibinit.c  iblines.c  ibread.c  ibrpp.c  ibrsv.c  ibsic.c  ibsre.c  ibsys.h  ibutil.c  ibwait.c  ibwrite.c  osfuncs.c  osinit.c  ostimer.c  osutil.c
testudo/linux-gpib-svn/drivers/gpib/tms9914/: Makefile  board.h  cmd.c  init.c  interrupt.c  read.c  tms9914_aux.c  util.c  write.c
testudo/linux-gpib-svn/drivers/gpib/tnt4882/: Makefile  interrupt.c  mite.c  mite.h  ni-usb-b.txt  ni_cis_dump.txt  tnt4882.h  tnt4882_aux.c  tnt4882_cs.c  tnt4882_init.c  tnt4882_read.c  tnt4882_write.c
testudo/linux-gpib-svn/drivers/gpib/tnt4882-tms/: Makefile  init.c  interrupt.c  mite.c  mite.h  tnt4882.h
testudo/linux-gpib-svn/etc/pcmcia/: linux-gpib-pcmcia  linux-gpib-pcmcia.conf
testudo/linux-gpib-svn/examples/: Makefile.am  ibtest.c  master_read_to_file.c  master_write_from_file.c  slave_read_to_file.c  slave_write_from_file.c
testudo/linux-gpib-svn/include/: Makefile.am
testudo/linux-gpib-svn/language/: Makefile.am
testudo/linux-gpib-svn/language/guile/: Makefile.am  README  gpib.c  gpib.h  gpib.scm
testudo/linux-gpib-svn/language/perl/: Changes  LinuxGpib.pm  LinuxGpib.xs  MANIFEST  Makefile.PL  README  test.pl  typemap
testudo/linux-gpib-svn/language/perl/examples/n8ur/: hp3585b-control.pl  hp3585b-plot.pl  hp3585b.pm  hp8569b.pl  n8ur.pm
testudo/linux-gpib-svn/language/php/: Makefile.am  gpib.c  run  sample-php.ini
testudo/linux-gpib-svn/language/php/TESTS/: Makefile.am  alim1.php  hp4194.php  hp4194a.php
testudo/linux-gpib-svn/language/python/: Gpib.py  Makefile.am  README  gpibinter.c  gpibtest.py  setup.py
testudo/linux-gpib-svn/language/tcl/: .xsetup  Makefile.am  README  gpib.n  ibCmds.c
testudo/linux-gpib-svn/language/tcl/examples/: .xsetup  example1.tcl  example2.tcl
testudo/linux-gpib-svn/language/tcl/examples/tclib/: Buffer.tcl  FileDia.tcl  tclIndex
testudo/linux-gpib-svn/lib/: Makefile.am  async.c  globals.c  gpib_version_script  ib.h  ibBoard.c  ibCac.c  ibClr.c  ibCmd.c  ibConf.h  ibConfLex.l  ibConfYacc.y  ibDma.c  ibEos.c  ibEot.c  ibError.c  ibEvent.c  ibFind.c  ibFindLstn.c  ibGts.c  ibLines.c  ibLoc.c  ibOnl.c  ibP.h  ibPad.c  ibRd.c  ibRpp.c  ibRsp.c  ibRsv.c  ibSad.c  ibSic.c  ibSre.c  ibTmo.c  ibTrg.c  ibWait.c  ibWrt.c  ib_internal.h  ibask.c  ibbna.c  ibconfig.c  (+8 more)
testudo/linux-gpib-svn/lib/gpib_config/: Makefile.am  gpib_config.c
testudo/linux-gpib-svn/m4/: tcl.m4
testudo/linux-gpib-svn/test/: Makefile.am  README  libgpib_test.c  runtest
testudo/linux-gpib-svn/usb/: Makefile.am
testudo/linux-gpib-svn/usb/agilent_82357a/: Makefile.am  agilent_82357a  agilent_82357a.usermap
testudo/linux-gpib-svn/usb/ni_usb_gpib/: Makefile.am  ni_usb_gpib  ni_usb_gpib.usermap
testudo/linux-gpib-svn/util/: subdirs
testudo/linux-gpib-svn/util/linux_flags/: Makefile
testudo/linux-gpib-svn/util/templates/: gpib.conf
(+3762 files in other folders)
