# driver/include/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

EXTRA_DIST = amcc5920.h amccs5933.h gpibP.h gpib_ioctl.h gpib_proto.h \
	gpib_types.h gpib_user.h nec7210.h nec7210_registers.h plx9050.h \
	quancom_pci.h tms9914.h tnt4882_registers.h \
	linux/*.h

headersdir = $(includedir)/gpib
headers_HEADERS = gpib_user.h
